<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.MakeOrPresetBudgets">

    <TextView
        android:id="@+id/budgetMsg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:text="How would you like to create your budget allowances?"
        android:textAppearance="@android:style/TextAppearance.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/go_to_budget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:clickable="true"
        android:text="Setup Budgets"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textColor="#0000EE"
        android:textColorLink="@color/colorPrimaryDark"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/go_to_budget"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/budgetMsg">


        <View
            android:id="@+id/topButtonView"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000" />

        <Button
            android:id="@+id/create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFF"
            android:text="Create my budgets for me"
            android:textAppearance="@android:style/TextAppearance.Large" />

        <Button
            android:id="@+id/create2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFF"
            android:drawableRight="@drawable/checkbox_blue"
            android:text="Create my budgets for me"
            android:textAppearance="@android:style/TextAppearance.Large" />

        <View
            android:id="@+id/midButtonView"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginEnd="0dp"
            android:background="#000000"
            app:layout_constraintBottom_toTopOf="@+id/own"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/own"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFF"
            android:text="I have my own budgets created"
            android:textAppearance="@android:style/TextAppearance.Large"
            app:layout_constraintBottom_toTopOf="@id/bottomButtonView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/own2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFF"
            android:drawableRight="@drawable/checkbox_blue"
            android:text="I have my own budgets created"
            android:textAppearance="@android:style/TextAppearance.Large"
            app:layout_constraintBottom_toTopOf="@id/bottomButtonView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />

        <View
            android:id="@+id/bottomButtonView"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>